--- a/htmlCss/exercicios/ex022/fundo006.html
+++ b/htmlCss/exercicios/ex022/fundo006.html
@@ -8,16 +8,19 @@
     <style>
         body {
             height: 100vh;
+            /*
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
+            background-size: cover;*/
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -29,9 +32,18 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
 
-        p > Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus ipsa dolor doloremque, voluptatem sunt, quae consectetur, maiores odio nostrum aspernatur animi vel inventore nobis nam magni. Fugiat at similique ex.
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus ipsa dolor doloremque, voluptatem sunt, quae consectetur, maiores odio nostrum aspernatur animi vel inventore nobis nam magni. Fugiat at similique ex.
         Asperiores dolorem voluptate reiciendis. Veritatis, eius numquam cumque voluptatem similique quibusdam quas, dolores sit commodi beatae ipsum non! Dolorum qui excepturi quibusdam assumenda veniam ratione culpa eum tempore explicabo dolorem.
         Exercitationem atque velit nemo totam numquam, voluptate minus sit ipsa minima quae ad commodi molestiae corrupti ea veritatis debitis error dicta libero maiores ut distinctio ratione! Nostrum repellendus voluptates ea?
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi voluptatum a atque dolores blanditiis necessitatibus perspiciatis error magni labore, magnam placeat excepturi harum nihil sequi reprehenderit obcaecati iusto libero!
+        Sint, ullam. Ab alias quas, nobis, iure explicabo corrupti nihil dolor earum repellat architecto nulla omnis cumque quos sunt suscipit placeat eligendi. Nulla sed dolorem nobis debitis, minus sequi quae.
+        Quaerat accusamus ab excepturi voluptate illum accusantium consequuntur beatae. Incidunt eum recusandae earum laboriosam fuga aliquam, doloribus exercitationem voluptate porro sequi nemo quidem quos. Ratione quasi placeat deleniti doloribus dignissimos.
+        Aliquid sequi, quaerat numquam at eaque id repellat ipsum! Unde animi laborum eum nemo! Vitae, cum, asperiores unde aliquam reprehenderit dicta sed dolorum numquam praesentium incidunt minima sapiente, totam soluta.
+        Doloribus mollitia repellat nobis, non et quidem nihil ab sint at deleniti officia ducimus modi obcaecati quasi repudiandae labore sequi aliquid natus consectetur. Molestias in quibusdam, nobis corporis perspiciatis obcaecati!
+        Accusamus culpa debitis qui iste dicta blanditiis facilis mollitia quisquam itaque iure ipsam commodi vero quo, ipsa ea magni in, ducimus sint. Fugiat odit blanditiis velit iste, voluptatem recusandae nulla.
+        Esse accusamus quo id distinctio? Distinctio labore voluptatem explicabo facilis sunt earum eius. Eveniet molestiae, non, libero nobis rerum minima quia officia sed cumque illo blanditiis, quisquam natus. Amet, corporis?
+        Tempore quod, aliquam fuga enim doloremque magni velit beatae temporibus omnis. Esse magnam doloremque in iste fugiat distinctio delectus tenetur nostrum vitae, quaerat earum ipsam neque similique amet quia tempore!
+        Beatae quaerat possimus ab doloribus, nesciunt omnis, earum deserunt labore nulla corrupti voluptatem adipisci quas! Aspernatur atque praesentium, vel quia, numquam, sequi repellat ut ea corporis deleniti voluptas quam itaque.</p>
     </main>
 </body>
 </html>
