--- a/htmlCss/exercicios/ex023/tabela002.html
+++ b/htmlCss/exercicios/ex023/tabela002.html
@@ -13,11 +13,18 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
             border: 1px solid black;
             padding: 5px;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1;
+            background-color: gray;
         }
 
         thead, tfoot {
