--- a/htmlCss/exercicios/ex023/tabela002.html
+++ b/htmlCss/exercicios/ex023/tabela002.html
@@ -8,12 +8,18 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+            background-color: pink;
+        }
+
+        h1 {
+            text-align: center;
         }
 
         table {
             width: 500px;
             border-collapse: collapse;
             position: relative;
+            margin: auto;
         }
 
         td, th {
@@ -30,6 +36,10 @@
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+
+        tbody > tr:nth-child(2n) {
+            background-color: rgba(193, 93, 200, 0.587);
         }
 
         .num {
