arrumando as cores da tabela

--- a/htmlCss/exercicios/ex023/tabela002.html
+++ b/htmlCss/exercicios/ex023/tabela002.html
@@ -30,16 +30,20 @@
         thead > tr > th {
             position: sticky;
             top: -1px;
-            background-color: gray;
+            background-color: #c15dc8;
         }
 
         thead, tfoot {
-            background-color: gray;
+            background-color: #c15dc8;
             color: white;
         }
 
         tbody > tr:nth-child(2n) {
-            background-color: rgba(193, 93, 200, 0.587);
+            background-color: #c15dc896;
+        }
+
+        p {
+            text-align: justify;
         }
 
         .num {
