--- a/htmlCss/exercicios/ex023/tabela002.html
+++ b/htmlCss/exercicios/ex023/tabela002.html
@@ -10,9 +10,14 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
+        h1 {
+            text-align: center;
+        }
+
         table {
             width: 500px;
             border-collapse: collapse;
+            margin: auto;
         }
 
         td, th {
@@ -20,9 +25,21 @@
             padding: 5px;
         }
 
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: rgb(230, 98, 190);
+            font-variant: small-caps;
+        }
+
         thead, tfoot {
-            background-color: gray;
+            background-color: rgb(114, 1, 90);
             color: white;
+        }
+
+        tbody > tr:nth-child(odd) {
+            background-color: rgba(231, 172, 221, 0.747);
         }
 
         .num {
@@ -33,10 +50,11 @@
 <body>
     <h1>Uso de tabelas grandes</h1>
     <table>
+        <caption>População das unidades federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 100px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -152,7 +170,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de habitantes</th>
+                <th scope="row">Total de habitantes</th>
                 <td class="num">214,3 milhões</td>
             </tr>
         </tfoot>
