--- a/htmlCss/exercicios/ex023/tabela002.html
+++ b/htmlCss/exercicios/ex023/tabela002.html
@@ -36,16 +36,18 @@
         }
 
         thead, tfoot {
-            background-color: rgb(114, 1, 90);
+            background-color: #72015a;
             color: white;
         }
 
         tbody > tr:nth-child(odd) {
             background-color: rgba(231, 172, 221, 0.747);
+        }
 
         thead > tr > th {
             position: sticky;
             top: -1px; 
+            background-color:#c15dc8;
         }
 
         thead, tfoot {
