--- a/htmlCss/exercicios/ex024/iframe001.html
+++ b/htmlCss/exercicios/ex024/iframe001.html
@@ -10,11 +10,15 @@
     <h1>Testando o uso de um iframe</h1>
     <p>Acessando o site do 
     
-    <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+    <iframe src="https://www.cursoemvideo.com" frameborder="0" height="500px" width="500px">
+        <a href="https://www.cursoemvideo.com">Curso em Vídeo</a>
+    </iframe>
     
     para aprender a programar</p>
     <p>O repositório do Guanabara 
-    <iframe src="https://gustavoguanabara.github.io" frameborder="0"></iframe>
+    <iframe src="https://gustavoguanabara.github.io" frameborder="0">
+        no <a href="https://gustavoguanabara.github.io">github</a>
+    </iframe>
     também é legal</p>
 </body>
 </html>
