navegação com iframes

--- a/htmlCss/exercicios/ex024/iframe002.html
+++ b/htmlCss/exercicios/ex024/iframe002.html
@@ -21,7 +21,7 @@
     <h1>Teste com iframe</h1>
     <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, id. Similique reprehenderit cupiditate aspernatur, quisquam est autem eius eveniet eligendi. Praesentium mollitia amet accusantium repudiandae corrupti officiis dolorem quibusdam reiciendis!</span><span>Distinctio quia iusto labore eaque quam, ullam odit, iure nemo nobis incidunt animi accusamus neque. Non omnis mollitia quasi doloribus voluptatum ipsa? Facere, ducimus nobis. Corrupti dignissimos maiores blanditiis unde?</span><span>Illum nihil consequuntur et consequatur ad recusandae saepe nesciunt eum corporis! Velit, incidunt veniam. Deserunt voluptates ipsam non numquam quisquam, molestiae rerum molestias esse. Maxime ab quibusdam velit aliquam quae.</span></p>
 
-    <iframe src="../ex023/tabela006.html" frameborder="0">Infelizmente seu navegador não é compatível</iframe>
+    <iframe src="../ex023/tabela006.html" frameborder="0">Infelizmente seu navegador não é</iframe>
 
     <p><span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro odit, mollitia, error atque nam et numquam eum aperiam id excepturi eaque iusto nesciunt, perspiciatis ex culpa tempora! Molestiae, ex blanditiis.</span><span>Harum minus eum quo consectetur? Adipisci eos esse earum at voluptates quam, officiis totam cum dignissimos nihil modi commodi praesentium nesciunt ea minima eligendi odit ut necessitatibus quas nemo veritatis!</span><span>Porro sit aut cupiditate enim. Suscipit numquam vero dolorem doloribus cum in officia odit placeat necessitatibus facere ipsa voluptates modi fuga sapiente, rem ipsum aut tempora repellendus error itaque. Dicta!</span></p>
 </body>
