--- a/htmlCss/exercicios/ex024/paginas-extras/pag003.html
+++ b/htmlCss/exercicios/ex024/paginas-extras/pag003.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>página um</title>
+    <title>página três</title>
     <style>
         body  {
             font-family: Arial, Helvetica, sans-serif;
-            background-color: rgb(230, 173, 218);
+            background-color: rgb(230, 189, 173);
             color: blue;
         }
     </style>
 </head>
 <body>
-    <h1>Primeira página de exemplo</h1>
+    <h1>Terceira página de exemplo</h1>
     <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam optio odit animi ratione quam eius aspernatur ea iure. Itaque officiis architecto nisi impedit enim eius repudiandae nesciunt veniam rerum voluptatem!</span><span>Et, aut dolores? Perferendis ea quibusdam eveniet dolorum! Sunt iste ad ullam doloremque aspernatur illum odit perspiciatis possimus. Labore dolorem nulla amet explicabo impedit, qui fuga recusandae ut rem doloribus.</span></p>
     <p><span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim placeat aut dolore officia ipsum voluptatum sed soluta aperiam deserunt, architecto rerum assumenda quae et, a, magni harum cumque quibusdam itaque!</span><span>Quia dignissimos corrupti ipsam deserunt asperiores reprehenderit eos ducimus quam minima iure dolorem quidem unde voluptatum perferendis, iste assumenda vitae. Dolorum minima error minus aspernatur eos earum facere nesciunt rem.</span></p>
 </body>
