Colocando conteúdo diretamente no código

--- a/htmlCss/exercicios/ex024/iframe003.html
+++ b/htmlCss/exercicios/ex024/iframe003.html
@@ -29,7 +29,7 @@
 
     <p>Ea corrupti voluptates, vero alias accusantium cupiditate quibusdam facere illum voluptatem incidunt nam id est quisquam earum omnis totam consequatur sapiente accusamus error consequuntur magni aspernatur ut. Enim, totam omnis!</p>
 
-    <iframe src="" frameborder="1" id="tela" name="frame">Infelizmente seu navegador não é compatível com isso</iframe>
+    <iframe  frameborder="1" id="tela" name="frame" srcdoc="<h1> Escolha  uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae corporis cum dolores saepe ratione id eaque nisi quas illum! Obcaecati maiores perferendis quis, ratione tempora aperiam ex qui quibusdam ullam.</p><img src='../ex011/imagens/foto-p.png'>">Infelizmente seu navegador não é compatível com isso</iframe>
 
     <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam id velit reprehenderit adipisci vero consequatur repellendus eaque fuga ad doloremque, ea ducimus nam corporis iste expedita dolorum nobis esse officiis.</span><span>Mollitia aperiam officia, itaque quidem unde totam esse omnis sequi architecto amet qui animi deleniti soluta officiis inventore vero dolore non minima. Temporibus error blanditiis expedita et, ipsam aut? Voluptatum.</span></p>
 </body>
