--- a/htmlCss/exercicios/ex024/iframe006.html
+++ b/htmlCss/exercicios/ex024/iframe006.html
@@ -26,6 +26,7 @@
     </style>
 </head>
 <body>
+    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAJNJREFUSEvdlNsOgDAIQ93/f7TGRRLEQiGRGOeb7nJKC46t+RnN92+fAvarOiYi3BcdbgdIPB4oJYCVf0LaAHJxttGg2EwGrwOschFR/T6FoQqqF3n7HwDP82oFYuk8pyuohsqyWRjgeZ6yxA4mysAC2LTbSb+9rwXwPNbti/IJLWT+6r+pnhsEhQIzANY94fr/AQdq9ikZ67RLUgAAAABJRU5ErkJggg=="/>
     <h1>Conteúdos dentro de iframes</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi reiciendis quis voluptatum nemo ipsa optio culpa, libero rerum facilis. Nobis maiores ipsum aspernatur cum eaque inventore labore suscipit quidem nulla.</p>
