--- a/htmlCss/exercicios/ex025/form004.html
+++ b/htmlCss/exercicios/ex025/form004.html
@@ -7,22 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        Número
-        <input type="number" name="num" id="inum" min="1" max="10"
-        placeholder="1 á 10" step="0.1">
-    </div>
-    <div>
-        Mês
-        <input type="month" name="mes" id="imes" value="2023-03">
-    </div>
-    <div>
-        Data
-        <input type="date" name="data" id="idata" value="2023-03-13">
-    </div>
-    <div>
-        hora
-        <input type="time" name="hora" id="ihora" value="10:00">
-    </div>
+    <form action="cadastro.php">
+        <div>
+            Número
+            <input type="number" name="num" id="inum" min="1" max="10"
+            placeholder="1 á 10" step="0.1">
+        </div>
+        <div>
+            Mês
+            <input type="month" name="mes" id="imes" value="2023-03">
+        </div>
+        <div>
+            Data
+            <input type="date" name="data" id="idata" value="2023-03-13">
+        </div>
+        <div>
+            hora
+            <input type="time" name="hora" id="ihora" value="10:00">
+        </div>
+    </form>
 </body>
 </html>
