--- a/htmlCss/exercicios/ex025/form004.html
+++ b/htmlCss/exercicios/ex025/form004.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="cadastro.php">
+    <form action="cadastro.php" method="get" autocomplete="on">
         <div>
             Número
             <input type="number" name="num" id="inum" min="1" max="10"
