--- a/htmlCss/exercicios/ex025/form007.html
+++ b/htmlCss/exercicios/ex025/form007.html
@@ -12,13 +12,39 @@
         <p>
             <label for="iest">Estado</label>
             <select name="est" id="iest">
+                <optgroup label="Região Norte">
+                    <option value="AC">Acre</option>
+                    <option value="AP">Amapá</option>
+                    <option value="AM">Amazonas</option>
+                    <option value="PA">Pará</option>
+                    <option value="RO">Rondônia</option>
+                    <option value="RR">Roraima</option>
+                    <option value="TO">Tocantins</option>
+                </optgroup>
+                <optgroup label="Região Nordeste">
+                    <option value="AL">Alagoas</option>
+                    <option value="BA">Bahia</option>
+                    <option value="CE">Ceará</option>
+                    <option value="MA">Maranhão</option>
+                    <option value="PB">Paraíba</option>
+                    <option value="PE">Pernambuco</option>
+                    <option value="PI">Piauí</option>
+                    <option value="RN">Rio Grande do Norte</option>
+                    <option value="SE">Sergipe</option>
+                </optgroup>
+                <optgroup label="Região Centro-Oeste">
+                    <option value="DF">Distrito Federal</option>
+                    <option value="GO">Goiás</option>
+                    <option value="MT">Mato Grosso</option>
+                    <option value="MS">Mato Grosso do Sul</option>
+                </optgroup>
                 <optgroup label="Região Sudeste">
                     <option value="MG">Minas Gerais</option>
                     <option value="SP" selected>São Paulo</option>
                     <option value="RJ">Rio de Janeiro</option>
                     <option value="ES">Espírito Santo</option>
                 </optgroup>
-                <optgroup label="Sul">
+                <optgroup label="Região Sul">
                     <option value="PA">Paraná</option>
                     <option value="SC">Santa Catarina</option>
                     <option value="RS">Rio Grande do Sul</option>
