--- a/htmlCss/exercicios/ex025/form007.html
+++ b/htmlCss/exercicios/ex025/form007.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <h1>Exemplo de formulário</h1>
-    <form action="cadastro.php" method="get" autocomplete="on">
+    <form action="cadastro.php" method="post" autocomplete="on">
         <p>
             <label for="iest">Estado</label>
             <select name="est" id="iest">
+                <option value="" selected>Seu estado</option>
                 <optgroup label="Região Norte">
                     <option value="AC">Acre</option>
                     <option value="AP">Amapá</option>
@@ -40,7 +41,7 @@
                 </optgroup>
                 <optgroup label="Região Sudeste">
                     <option value="MG">Minas Gerais</option>
-                    <option value="SP" selected>São Paulo</option>
+                    <option value="SP">São Paulo</option>
                     <option value="RJ">Rio de Janeiro</option>
                     <option value="ES">Espírito Santo</option>
                 </optgroup>
@@ -51,7 +52,20 @@
                 </optgroup>
             </select>
         </p>
-        
+        <p>
+            <label for="iprof">Profissão</label>
+            <input type="text" name="prof" id="iprof" list="lstprof">
+            <datalist id="lstprof">
+                    <option value="ADM">Administrador</option>
+                    <option value="CONT">Contabilista</option>
+                    <option value="DEV">Desenvolvedor</option>
+                    <option value="PROF">Professor</option>
+            </datalist>
+        </p>
+        <p>
+            <label for="imsg">Mensagem</label>
+            <textarea name="msg" id="imsg" cols="30" rows="10"></textarea>
+        </p>
         <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
