--- a/htmlCss/exercicios/ex026/mq004/index.html
+++ b/htmlCss/exercicios/ex026/mq004/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" type="text/css" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+
+        <img id="phone" src="imagens/icon-phone.png" alt="Acessando via smartphone">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="Acessando via tablet">
+        <img id="print" src="imagens/icon-print.png" alt="Acessando site de impressão">
+        <img id="pc" src="imagens/icon-pc.png" alt="Acessando via pc">
+        <img id="tv" src="imagens/icon-tv.png" alt="Acessando na TV">
+
+
+    </main>
 </body>
 </html>
