--- a/htmlCss/exercicios/ex026/mq005/index.html
+++ b/htmlCss/exercicios/ex026/mq005/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site responsivo</title>
     <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+            <i id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
+            menu
+            </i>
+        <menu id="itens">
             <ul>
                 <li>
                     <a href="#">Opção 1</a>
@@ -38,5 +42,14 @@
             <p>Voluptates natus fuga expedita voluptate soluta. Repellendus rerum ducimus rem repudiandae dolor provident distinctio, consequatur perferendis molestiae voluptas doloribus ea, hic earum saepe officia. Temporibus veniam tenetur ipsam accusamus blanditiis enim! Libero praesentium sunt ipsa, ab repudiandae cupiditate quae, ea sed iste ut aliquid, nulla in nobis autem! Omnis, dolores!</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
